# NHSUKMCP-Python

./: .env.example  .gitignore  Dockerfile  INSTALL_README.md  PUBLICATION_SUCCESS.md  PYPI_PUBLISHING_GUIDE.md  README.md  SIGNING.md  pyproject.toml
nhs_orgs_mcp/: __init__.py  azure_search.py  models.py  server.py
nhsuk_mcp/: __init__.py  azure_search.py  server.py
