[project]
name = "nhsuk-mcp"
version = "1.0.5"
description = "NHSUK MCP Server - Search NHS organisations by type and location, plus access NHS health information"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rob Sinclair", email = "rob.sinclair@nhschoices.net"}
]
keywords = ["mcp", "model-context-protocol", "nhs", "healthcare", "azure", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sinclr4/nhsuk-mcp-python"
Documentation = "https://github.com/sinclr4/nhsuk-mcp-python#readme"
Repository = "https://github.com/sinclr4/nhsuk-mcp-python"
Issues = "https://github.com/sinclr4/nhsuk-mcp-python/issues"

[project.scripts]
nhs-orgs-mcp = "nhs_orgs_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nhs_orgs_mcp"]

[tool.setuptools.package-data]
nhs_orgs_mcp = ["py.typed"]
